# microtech_old

./: .gitignore  CMakeLists.txt  README.md  custom-compiler.yaml
app/: CMakeLists.txt
app/exercise1/src/: CMakeLists.txt  main.cpp
cmake/: msp430.cmake
hal/: CMakeLists.txt
hal/box1/: Box1.cpp  CMakeLists.txt  HwInputHandle.cpp  HwInputHandle.hpp  HwOutputHandle.cpp  HwOutputHandle.hpp
hal/include/: Board.hpp  Hal.hpp  iHwInput.hpp  iHwOutput.hpp  iLed.hpp
hal/simulation/: CMakeLists.txt  Simulation.cpp
